<resources>
    <string name="app_name">Battleship</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="menu_title">MENU</string>
    <string name="hi_message">Welcome, my darling</string>
    <string name="menu_start">Start game</string>
    <string name="menu_join">Join game</string>
    <string name="menu_statistics">My statistics</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_game_info">Tap to create a ship.\n\nHint:\n 4 destroyers (1 blocks) \n 3 submarines (2 blocks) \n 2 cruisers (3 blocks) \n 1 battleship (4 blocks)</string>
    <string name="incorrect_id_message">Unfortunately, id is incorrect… \nBe careful, honey!</string>
    <string name="incorrect_ship_placement_message">Incorrect placement for ships… \nBe careful, honey!</string>
    <string name="play_now_ad_message">Be sure your friend is ready to play with you!</string>
    <string name="menu_profile">profile</string>
    <string name="no_stat_message">U have no statistics yet. \nPlay now!</string>
</resources>